TesteDoPDF/calc.output
State 9 conflicts: 6 reduce/reduce


Grammar

    0 $accept: statement_list $end

    1 statement_list: '\n'
    2               | statement_list statementInt '\n'
    3               | statement_list statementReal '\n'
    4               | statement_list statementChar '\n'

    5 letra: CARACTERE

    6 statementChar: CHAR NAME ATRIBUICAO letra
    7              | letra

    8 statementReal: REAL NAME ATRIBUICAO expressionReal
    9              | expressionReal

   10 statementInt: INT NAME ATRIBUICAO expressionInt
   11             | expressionInt

   12 expressionInt: expressionInt SOMA expressionInt
   13              | expressionInt SUBTRACAO expressionInt
   14              | expressionInt MULTIPLICACAO expressionInt
   15              | expressionInt DIVISAO expressionInt
   16              | SUBTRACAO expressionInt
   17              | ABREPARENTESES expressionInt FECHAPARENTESES
   18              | NUMBERINT
   19              | NAME

   20 expressionReal: expressionReal SOMA expressionReal
   21               | expressionReal SUBTRACAO expressionReal
   22               | expressionReal MULTIPLICACAO expressionReal
   23               | expressionReal DIVISAO expressionReal
   24               | SUBTRACAO expressionReal
   25               | ABREPARENTESES expressionReal FECHAPARENTESES
   26               | NUMBERREAL
   27               | NAME


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 1 2 3 4
error (256)
SUBTRACAO (258) 13 16 21 24
SOMA (259) 12 20
DIVISAO (260) 15 23
MULTIPLICACAO (261) 14 22
FECHAPARENTESES (262) 17 25
ABREPARENTESES (263) 17 25
ATRIBUICAO (264) 6 8 10
INT (265) 10
REAL (266) 8
CHAR (267) 6
NAME (268) 6 8 10 19 27
NUMBERREAL (269) 26
NUMBERINT (270) 18
CARACTERE (271) 5
UMINUS (272)


Nonterminals, with rules where they appear

$accept (19)
    on left: 0
statement_list (20)
    on left: 1 2 3 4, on right: 0 2 3 4
letra (21)
    on left: 5, on right: 6 7
statementChar (22)
    on left: 6 7, on right: 4
statementReal (23)
    on left: 8 9, on right: 3
statementInt (24)
    on left: 10 11, on right: 2
expressionInt (25)
    on left: 12 13 14 15 16 17 18 19, on right: 10 11 12 13 14 15 16
    17
expressionReal (26)
    on left: 20 21 22 23 24 25 26 27, on right: 8 9 20 21 22 23 24
    25


state 0

    0 $accept: . statement_list $end

    '\n'  shift, and go to state 1

    statement_list  go to state 2


state 1

    1 statement_list: '\n' .

    $default  reduce using rule 1 (statement_list)


state 2

    0 $accept: statement_list . $end
    2 statement_list: statement_list . statementInt '\n'
    3               | statement_list . statementReal '\n'
    4               | statement_list . statementChar '\n'

    $end            shift, and go to state 3
    SUBTRACAO       shift, and go to state 4
    ABREPARENTESES  shift, and go to state 5
    INT             shift, and go to state 6
    REAL            shift, and go to state 7
    CHAR            shift, and go to state 8
    NAME            shift, and go to state 9
    NUMBERREAL      shift, and go to state 10
    NUMBERINT       shift, and go to state 11
    CARACTERE       shift, and go to state 12

    letra           go to state 13
    statementChar   go to state 14
    statementReal   go to state 15
    statementInt    go to state 16
    expressionInt   go to state 17
    expressionReal  go to state 18


state 3

    0 $accept: statement_list $end .

    $default  accept


state 4

   16 expressionInt: SUBTRACAO . expressionInt
   24 expressionReal: SUBTRACAO . expressionReal

    SUBTRACAO       shift, and go to state 4
    ABREPARENTESES  shift, and go to state 5
    NAME            shift, and go to state 9
    NUMBERREAL      shift, and go to state 10
    NUMBERINT       shift, and go to state 11

    expressionInt   go to state 19
    expressionReal  go to state 20


state 5

   17 expressionInt: ABREPARENTESES . expressionInt FECHAPARENTESES
   25 expressionReal: ABREPARENTESES . expressionReal FECHAPARENTESES

    SUBTRACAO       shift, and go to state 4
    ABREPARENTESES  shift, and go to state 5
    NAME            shift, and go to state 9
    NUMBERREAL      shift, and go to state 10
    NUMBERINT       shift, and go to state 11

    expressionInt   go to state 21
    expressionReal  go to state 22


state 6

   10 statementInt: INT . NAME ATRIBUICAO expressionInt

    NAME  shift, and go to state 23


state 7

    8 statementReal: REAL . NAME ATRIBUICAO expressionReal

    NAME  shift, and go to state 24


state 8

    6 statementChar: CHAR . NAME ATRIBUICAO letra

    NAME  shift, and go to state 25


state 9

   19 expressionInt: NAME .
   27 expressionReal: NAME .

    SUBTRACAO        reduce using rule 19 (expressionInt)
    SUBTRACAO        [reduce using rule 27 (expressionReal)]
    SOMA             reduce using rule 19 (expressionInt)
    SOMA             [reduce using rule 27 (expressionReal)]
    DIVISAO          reduce using rule 19 (expressionInt)
    DIVISAO          [reduce using rule 27 (expressionReal)]
    MULTIPLICACAO    reduce using rule 19 (expressionInt)
    MULTIPLICACAO    [reduce using rule 27 (expressionReal)]
    FECHAPARENTESES  reduce using rule 19 (expressionInt)
    FECHAPARENTESES  [reduce using rule 27 (expressionReal)]
    '\n'             reduce using rule 19 (expressionInt)
    '\n'             [reduce using rule 27 (expressionReal)]
    $default         reduce using rule 19 (expressionInt)


state 10

   26 expressionReal: NUMBERREAL .

    $default  reduce using rule 26 (expressionReal)


state 11

   18 expressionInt: NUMBERINT .

    $default  reduce using rule 18 (expressionInt)


state 12

    5 letra: CARACTERE .

    $default  reduce using rule 5 (letra)


state 13

    7 statementChar: letra .

    $default  reduce using rule 7 (statementChar)


state 14

    4 statement_list: statement_list statementChar . '\n'

    '\n'  shift, and go to state 26


state 15

    3 statement_list: statement_list statementReal . '\n'

    '\n'  shift, and go to state 27


state 16

    2 statement_list: statement_list statementInt . '\n'

    '\n'  shift, and go to state 28


state 17

   11 statementInt: expressionInt .
   12 expressionInt: expressionInt . SOMA expressionInt
   13              | expressionInt . SUBTRACAO expressionInt
   14              | expressionInt . MULTIPLICACAO expressionInt
   15              | expressionInt . DIVISAO expressionInt

    SUBTRACAO      shift, and go to state 29
    SOMA           shift, and go to state 30
    DIVISAO        shift, and go to state 31
    MULTIPLICACAO  shift, and go to state 32

    $default  reduce using rule 11 (statementInt)


state 18

    9 statementReal: expressionReal .
   20 expressionReal: expressionReal . SOMA expressionReal
   21               | expressionReal . SUBTRACAO expressionReal
   22               | expressionReal . MULTIPLICACAO expressionReal
   23               | expressionReal . DIVISAO expressionReal

    SUBTRACAO      shift, and go to state 33
    SOMA           shift, and go to state 34
    DIVISAO        shift, and go to state 35
    MULTIPLICACAO  shift, and go to state 36

    $default  reduce using rule 9 (statementReal)


state 19

   12 expressionInt: expressionInt . SOMA expressionInt
   13              | expressionInt . SUBTRACAO expressionInt
   14              | expressionInt . MULTIPLICACAO expressionInt
   15              | expressionInt . DIVISAO expressionInt
   16              | SUBTRACAO expressionInt .

    $default  reduce using rule 16 (expressionInt)


state 20

   20 expressionReal: expressionReal . SOMA expressionReal
   21               | expressionReal . SUBTRACAO expressionReal
   22               | expressionReal . MULTIPLICACAO expressionReal
   23               | expressionReal . DIVISAO expressionReal
   24               | SUBTRACAO expressionReal .

    $default  reduce using rule 24 (expressionReal)


state 21

   12 expressionInt: expressionInt . SOMA expressionInt
   13              | expressionInt . SUBTRACAO expressionInt
   14              | expressionInt . MULTIPLICACAO expressionInt
   15              | expressionInt . DIVISAO expressionInt
   17              | ABREPARENTESES expressionInt . FECHAPARENTESES

    SUBTRACAO        shift, and go to state 29
    SOMA             shift, and go to state 30
    DIVISAO          shift, and go to state 31
    MULTIPLICACAO    shift, and go to state 32
    FECHAPARENTESES  shift, and go to state 37


state 22

   20 expressionReal: expressionReal . SOMA expressionReal
   21               | expressionReal . SUBTRACAO expressionReal
   22               | expressionReal . MULTIPLICACAO expressionReal
   23               | expressionReal . DIVISAO expressionReal
   25               | ABREPARENTESES expressionReal . FECHAPARENTESES

    SUBTRACAO        shift, and go to state 33
    SOMA             shift, and go to state 34
    DIVISAO          shift, and go to state 35
    MULTIPLICACAO    shift, and go to state 36
    FECHAPARENTESES  shift, and go to state 38


state 23

   10 statementInt: INT NAME . ATRIBUICAO expressionInt

    ATRIBUICAO  shift, and go to state 39


state 24

    8 statementReal: REAL NAME . ATRIBUICAO expressionReal

    ATRIBUICAO  shift, and go to state 40


state 25

    6 statementChar: CHAR NAME . ATRIBUICAO letra

    ATRIBUICAO  shift, and go to state 41


state 26

    4 statement_list: statement_list statementChar '\n' .

    $default  reduce using rule 4 (statement_list)


state 27

    3 statement_list: statement_list statementReal '\n' .

    $default  reduce using rule 3 (statement_list)


state 28

    2 statement_list: statement_list statementInt '\n' .

    $default  reduce using rule 2 (statement_list)


state 29

   13 expressionInt: expressionInt SUBTRACAO . expressionInt

    SUBTRACAO       shift, and go to state 42
    ABREPARENTESES  shift, and go to state 43
    NAME            shift, and go to state 44
    NUMBERINT       shift, and go to state 11

    expressionInt  go to state 45


state 30

   12 expressionInt: expressionInt SOMA . expressionInt

    SUBTRACAO       shift, and go to state 42
    ABREPARENTESES  shift, and go to state 43
    NAME            shift, and go to state 44
    NUMBERINT       shift, and go to state 11

    expressionInt  go to state 46


state 31

   15 expressionInt: expressionInt DIVISAO . expressionInt

    SUBTRACAO       shift, and go to state 42
    ABREPARENTESES  shift, and go to state 43
    NAME            shift, and go to state 44
    NUMBERINT       shift, and go to state 11

    expressionInt  go to state 47


state 32

   14 expressionInt: expressionInt MULTIPLICACAO . expressionInt

    SUBTRACAO       shift, and go to state 42
    ABREPARENTESES  shift, and go to state 43
    NAME            shift, and go to state 44
    NUMBERINT       shift, and go to state 11

    expressionInt  go to state 48


state 33

   21 expressionReal: expressionReal SUBTRACAO . expressionReal

    SUBTRACAO       shift, and go to state 49
    ABREPARENTESES  shift, and go to state 50
    NAME            shift, and go to state 51
    NUMBERREAL      shift, and go to state 10

    expressionReal  go to state 52


state 34

   20 expressionReal: expressionReal SOMA . expressionReal

    SUBTRACAO       shift, and go to state 49
    ABREPARENTESES  shift, and go to state 50
    NAME            shift, and go to state 51
    NUMBERREAL      shift, and go to state 10

    expressionReal  go to state 53


state 35

   23 expressionReal: expressionReal DIVISAO . expressionReal

    SUBTRACAO       shift, and go to state 49
    ABREPARENTESES  shift, and go to state 50
    NAME            shift, and go to state 51
    NUMBERREAL      shift, and go to state 10

    expressionReal  go to state 54


state 36

   22 expressionReal: expressionReal MULTIPLICACAO . expressionReal

    SUBTRACAO       shift, and go to state 49
    ABREPARENTESES  shift, and go to state 50
    NAME            shift, and go to state 51
    NUMBERREAL      shift, and go to state 10

    expressionReal  go to state 55


state 37

   17 expressionInt: ABREPARENTESES expressionInt FECHAPARENTESES .

    $default  reduce using rule 17 (expressionInt)


state 38

   25 expressionReal: ABREPARENTESES expressionReal FECHAPARENTESES .

    $default  reduce using rule 25 (expressionReal)


state 39

   10 statementInt: INT NAME ATRIBUICAO . expressionInt

    SUBTRACAO       shift, and go to state 42
    ABREPARENTESES  shift, and go to state 43
    NAME            shift, and go to state 44
    NUMBERINT       shift, and go to state 11

    expressionInt  go to state 56


state 40

    8 statementReal: REAL NAME ATRIBUICAO . expressionReal

    SUBTRACAO       shift, and go to state 49
    ABREPARENTESES  shift, and go to state 50
    NAME            shift, and go to state 51
    NUMBERREAL      shift, and go to state 10

    expressionReal  go to state 57


state 41

    6 statementChar: CHAR NAME ATRIBUICAO . letra

    CARACTERE  shift, and go to state 12

    letra  go to state 58


state 42

   16 expressionInt: SUBTRACAO . expressionInt

    SUBTRACAO       shift, and go to state 42
    ABREPARENTESES  shift, and go to state 43
    NAME            shift, and go to state 44
    NUMBERINT       shift, and go to state 11

    expressionInt  go to state 19


state 43

   17 expressionInt: ABREPARENTESES . expressionInt FECHAPARENTESES

    SUBTRACAO       shift, and go to state 42
    ABREPARENTESES  shift, and go to state 43
    NAME            shift, and go to state 44
    NUMBERINT       shift, and go to state 11

    expressionInt  go to state 21


state 44

   19 expressionInt: NAME .

    $default  reduce using rule 19 (expressionInt)


state 45

   12 expressionInt: expressionInt . SOMA expressionInt
   13              | expressionInt . SUBTRACAO expressionInt
   13              | expressionInt SUBTRACAO expressionInt .
   14              | expressionInt . MULTIPLICACAO expressionInt
   15              | expressionInt . DIVISAO expressionInt

    DIVISAO        shift, and go to state 31
    MULTIPLICACAO  shift, and go to state 32

    $default  reduce using rule 13 (expressionInt)


state 46

   12 expressionInt: expressionInt . SOMA expressionInt
   12              | expressionInt SOMA expressionInt .
   13              | expressionInt . SUBTRACAO expressionInt
   14              | expressionInt . MULTIPLICACAO expressionInt
   15              | expressionInt . DIVISAO expressionInt

    DIVISAO        shift, and go to state 31
    MULTIPLICACAO  shift, and go to state 32

    $default  reduce using rule 12 (expressionInt)


state 47

   12 expressionInt: expressionInt . SOMA expressionInt
   13              | expressionInt . SUBTRACAO expressionInt
   14              | expressionInt . MULTIPLICACAO expressionInt
   15              | expressionInt . DIVISAO expressionInt
   15              | expressionInt DIVISAO expressionInt .

    $default  reduce using rule 15 (expressionInt)


state 48

   12 expressionInt: expressionInt . SOMA expressionInt
   13              | expressionInt . SUBTRACAO expressionInt
   14              | expressionInt . MULTIPLICACAO expressionInt
   14              | expressionInt MULTIPLICACAO expressionInt .
   15              | expressionInt . DIVISAO expressionInt

    $default  reduce using rule 14 (expressionInt)


state 49

   24 expressionReal: SUBTRACAO . expressionReal

    SUBTRACAO       shift, and go to state 49
    ABREPARENTESES  shift, and go to state 50
    NAME            shift, and go to state 51
    NUMBERREAL      shift, and go to state 10

    expressionReal  go to state 20


state 50

   25 expressionReal: ABREPARENTESES . expressionReal FECHAPARENTESES

    SUBTRACAO       shift, and go to state 49
    ABREPARENTESES  shift, and go to state 50
    NAME            shift, and go to state 51
    NUMBERREAL      shift, and go to state 10

    expressionReal  go to state 22


state 51

   27 expressionReal: NAME .

    $default  reduce using rule 27 (expressionReal)


state 52

   20 expressionReal: expressionReal . SOMA expressionReal
   21               | expressionReal . SUBTRACAO expressionReal
   21               | expressionReal SUBTRACAO expressionReal .
   22               | expressionReal . MULTIPLICACAO expressionReal
   23               | expressionReal . DIVISAO expressionReal

    DIVISAO        shift, and go to state 35
    MULTIPLICACAO  shift, and go to state 36

    $default  reduce using rule 21 (expressionReal)


state 53

   20 expressionReal: expressionReal . SOMA expressionReal
   20               | expressionReal SOMA expressionReal .
   21               | expressionReal . SUBTRACAO expressionReal
   22               | expressionReal . MULTIPLICACAO expressionReal
   23               | expressionReal . DIVISAO expressionReal

    DIVISAO        shift, and go to state 35
    MULTIPLICACAO  shift, and go to state 36

    $default  reduce using rule 20 (expressionReal)


state 54

   20 expressionReal: expressionReal . SOMA expressionReal
   21               | expressionReal . SUBTRACAO expressionReal
   22               | expressionReal . MULTIPLICACAO expressionReal
   23               | expressionReal . DIVISAO expressionReal
   23               | expressionReal DIVISAO expressionReal .

    $default  reduce using rule 23 (expressionReal)


state 55

   20 expressionReal: expressionReal . SOMA expressionReal
   21               | expressionReal . SUBTRACAO expressionReal
   22               | expressionReal . MULTIPLICACAO expressionReal
   22               | expressionReal MULTIPLICACAO expressionReal .
   23               | expressionReal . DIVISAO expressionReal

    $default  reduce using rule 22 (expressionReal)


state 56

   10 statementInt: INT NAME ATRIBUICAO expressionInt .
   12 expressionInt: expressionInt . SOMA expressionInt
   13              | expressionInt . SUBTRACAO expressionInt
   14              | expressionInt . MULTIPLICACAO expressionInt
   15              | expressionInt . DIVISAO expressionInt

    SUBTRACAO      shift, and go to state 29
    SOMA           shift, and go to state 30
    DIVISAO        shift, and go to state 31
    MULTIPLICACAO  shift, and go to state 32

    $default  reduce using rule 10 (statementInt)


state 57

    8 statementReal: REAL NAME ATRIBUICAO expressionReal .
   20 expressionReal: expressionReal . SOMA expressionReal
   21               | expressionReal . SUBTRACAO expressionReal
   22               | expressionReal . MULTIPLICACAO expressionReal
   23               | expressionReal . DIVISAO expressionReal

    SUBTRACAO      shift, and go to state 33
    SOMA           shift, and go to state 34
    DIVISAO        shift, and go to state 35
    MULTIPLICACAO  shift, and go to state 36

    $default  reduce using rule 8 (statementReal)


state 58

    6 statementChar: CHAR NAME ATRIBUICAO letra .

    $default  reduce using rule 6 (statementChar)
